Fix styling of not-carets and invisible rows

--- a/css/caret.css
+++ b/css/caret.css
@@ -29,10 +29,10 @@ tr:not(.caret) .uin:placeholder-shown {
 	border-style: none;
 }
 
-tr:hover td {
+tr:not(.caret).not(.invisiblerow):hover td {
 	background-color: rgba(220,100,100,0.1);
 }
 
-tr:not(.caret) td:hover {
+tr:not(.caret):not(.invisiblerow) td:hover {
 	background-color: rgba(220,50,50,0.25);
 }
